tests/paczka1/small_fuzzy/17444487.err
Error in line 2: YJXO S344 8,1
Error in line 3: aP8XjZLRE A197 57,6
Error in line 10: X0r9cbxO0e A19+ 40,+
Error in line 8: EWcpuZDjNOh A197 58,3
